[package]
name = "simple_zkml"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon", "serde"] }
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.9"
libm = "0.2.16"
ndarray-rand = "0.16.0"
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
